--- a/huiche-example/pom.xml
+++ b/huiche-example/pom.xml
@@ -8,15 +8,19 @@
         <version>1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>sql-builder</artifactId>
+
+    <artifactId>huiche-example</artifactId>
     <dependencies>
+        <!--引入starter-->
         <dependency>
             <groupId>org.huiche</groupId>
-            <artifactId>huiche-annotation</artifactId>
+            <artifactId>huiche-spring-boot-starter</artifactId>
         </dependency>
+        <!--数据库-->
         <dependency>
-            <groupId>org.huiche</groupId>
-            <artifactId>huiche-sql-builder</artifactId>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
